# XenorLuaGenerator

./: Cargo.toml  LICENSE.md  README.md  docs.json
example_lua_folder/: example_1.lua
example_lua_folder/subfolder/: example_2.lua  example_3.lua
src/: main.rs  scanner.rs
template/: category.html  index.html  search.js  style.css
